// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should build a select from automations 1`] = `
Array [
  <div>
    
  </div>,
  <div>
    <div
      className="flex flex-1"
    >
      Foo
    </div>
  </div>,
  <div>
    <div
      className="flex flex-1"
    >
      Bar
    </div>
  </div>,
]
`;

exports[`should build a select from endpoint automations  1`] = `
Array [
  <div>
    
  </div>,
  <div>
    <div
      className="flex flex-1"
    >
      Bar
    </div>
  </div>,
]
`;

exports[`should build a select from pages 1`] = `
Array [
  <div>
    
  </div>,
  <div>
    <div
      className="flex flex-col "
    >
      <div>
        Bar
      </div>
      <div
        className="text-neutral-500 text-xs"
      >
        Bar automation
      </div>
    </div>
  </div>,
]
`;
